# keys-r-us

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
keys_r_us/: __about__.py  encoding.py  spec.py
keys_r_us/app/: abstract.py  decoder.py  main.py  services.py  spec.py
keys_r_us/app/widgets/: __init__.py  tabs.py
keys_r_us/cli/: __init__.py  formats.py  transcode.py  util.py
keys_r_us/cli/bip32/: __init__.py  derive.py
keys_r_us/cli/bip39/: __init__.py  derive.py  generate.py
keys_r_us/cli/slip39/: __init__.py  generate.py  recover.py
keys_r_us/encoding/: __init__.py  base58.py  hex.py  interface.py  qr.py
keys_r_us/scripts/: run_app.py  run_dev.py
tests/: __init__.py  conftest.py
tests/bip39/: test_derive.py
tests/encoding/: test_qr.py
tests/slip39/: test_generate.py
