[tool.poetry]
name = "keys-r-us"
version = "0.0.3"
description = ""
authors = ["Evan Aranda <evanaranda35@gmail.com>"]
readme = "README.md"
packages = [{ include = "keys_r_us" }]

[tool.poetry.dependencies]
python = "^3.7"
mnemonic = "^0.20"
shamir-mnemonic = "^0.2.2"
base58 = "^2.1.1"
click = "^8.1.3"
qrcode = "^7.4.2"
pyzbar = "^0.1.9"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.poetry.scripts]
keys-r-us = "keys_r_us.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
